# dbland

./: .gitignore  .prettierrc  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  TODO.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  release.yml
.skills/brand-guidelines/: SKILL.md
apps/desktop/: CHANGELOG.md  README.md  ROADMAP.md  TODO.md  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  validation.rs
apps/desktop/src-tauri/src/adapters/: mod.rs  mongodb.rs  redis.rs
apps/desktop/src-tauri/src/commands/: aggregation.rs  collection_stats.rs  connection.rs  document.rs  geospatial.rs  gridfs.rs  import_export.rs  indexes.rs  mod.rs  profiler.rs  query.rs  redis.rs  replica_set.rs  saved_queries.rs  schema.rs  sharding.rs
apps/desktop/src-tauri/src/state/: connection_pool.rs  mod.rs
apps/desktop/src-tauri/src/storage/: crypto.rs  mod.rs  query_history.rs  saved_queries.rs  sqlite.rs
apps/desktop/src-tauri/src/tunnel/: mod.rs  ssh.rs
apps/desktop/src/components/connection/: ConnectionManagerDialog.tsx
apps/desktop/src/components/layout/: AppLayout.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx
apps/desktop/src/lib/: tauri-platform.ts
apps/desktop/src/pages/: HomePage.tsx  RedisWorkspacePage.tsx  SettingsPage.tsx  WorkspacePage.tsx
apps/desktop/src/stores/: connection-store.ts  index.ts  schema-store.ts
apps/web/: CHANGELOG.md  README.md  ROADMAP.md  TODO.md  package.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/web/src/components/layout/: AppLayout.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx
apps/web/src/lib/: web-platform.ts
apps/web/src/pages/: HomePage.tsx  SettingsPage.tsx  WorkspacePage.tsx
docs/: CONTRIBUTING.md  USER_GUIDE.md
libs/core/: CHANGELOG.md  README.md  ROADMAP.md  TODO.md  package.json  tsconfig.json  vitest.config.ts
libs/core/src/: index.ts
libs/core/src/application/: error-extraction.test.ts  error-extraction.ts
libs/core/src/application/ports/: AdapterRegistryPort.ts  ConnectionStoragePort.ts  DatabaseAdapterPort.ts  LoggerPort.ts
libs/core/src/application/use-cases/: ConnectToDatabaseUseCase.test.ts  ConnectToDatabaseUseCase.ts  DisconnectFromDatabaseUseCase.test.ts  DisconnectFromDatabaseUseCase.ts  ExecuteQueryUseCase.test.ts  ExecuteQueryUseCase.ts  GetSchemaUseCase.test.ts  GetSchemaUseCase.ts  test-helpers.ts
(+34 files in other folders)
