[package]
name = "dbland"
version = "1.1.0"
description = "DBLand - NoSQL Database Agnostic GUI/WEB Client"
authors = ["Fozilbek Samiyev"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# MongoDB driver
mongodb = "3"
# Redis driver
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
# SQLite for local storage
rusqlite = { version = "0.32", features = ["bundled"] }
# Encryption
aes-gcm = "0.10"
# UUID generation
uuid = { version = "1", features = ["v4"] }
# Async runtime
async-trait = "0.1"
# Stream processing
futures = "0.3"
# URL encoding
urlencoding = "2"
# Error handling
thiserror = "2"
# Date/time
chrono = { version = "0.4", features = ["serde"] }
# SSH tunneling
ssh2 = "0.9"
# Base64 encoding/decoding for GridFS
base64 = "0.22"
# OS keychain — encryption key never touches disk
keyring = "3"
# Structured logging facade (no-op when no subscriber is initialised)
log = "0.4"
# Logger backend — environment-driven; only emits when RUST_LOG is set
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
